--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
-	<title>Svelte app</title>
+	<title>FUN Chat</title>
 
-	<link rel='icon' type='image/png' href='/favicon.png'>
+	<link rel='icon' type='image/png' href='https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSPK8pDcHvn-vD1jQo4KkRkp52MWPepQcKlkA&usqp=CAU'>
 	<link rel='stylesheet' href='/global.css'>
 	<link rel='stylesheet' href='/build/bundle.css'>
 
